# stbz_lib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/stbz_lib/: __init__.py  _capture.py  _close.py  _kb.py  _mic.py  _mouse.py  _shutdown.py  _win32.py
src/stbz_lib/_core/: _hook.py  _win32.py
tests/: test_capture.py  test_close.py  test_cv.py  test_kb.py  test_mic.py  test_mouse.py  test_shutdown.py
